<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lab01</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hola Mundo!</string>
    <string name="etiqueta1">Número 1</string>
	<string name="etiqueta2">Número 2</string>
    <string name="etiqueta3">Número 3</string>
    <string name="etiqueta4">Número 4</string>
    <string name="n1">N1</string>
    <string name="n2">N2</string>
    <string name="rp">RP</string>
    <string name="sumar">Sumar</string>
    <string name="n1_hint">Ingresar N1(1)</string>
    <string name="n2_hint">Ingresar N2(1)</string>
    <color name="text_color">#0000FF</color>
    
    <string-array name="operadores">
        <item>Sumar</item>
        <item>Restar</item>
        <item>Producto</item>
        <item>División</item>
    </string-array>
</resources>
